--- a/index.html
+++ b/index.html
@@ -265,25 +265,27 @@
             <div id="ops-projects" class="subview">
               <div class="card" style="max-width: 900px; margin: 0 auto;">
                 <h2>New Project</h2>
-                <form id="form-project" class="form-grid">
-                  <label style="grid-column: 1 / -1;">
+                <form id="form-project" class="task-form-grid">
+                <form id="form-project" class="task-form-grid">
+                  <label class="task-label task-label-full">
                     Project Title *
                     <input
                       type="text"
                       name="name"
+                      class="task-input"
                       placeholder="Enter project title"
                       required
                     />
                   </label>
-                  <label>
+                  <label class="task-label">
                     Owner
-                    <select name="ownerId" id="select-project-owner">
+                    <select name="ownerId" id="select-project-owner" class="task-input">
                       <option value="">Select owner</option>
                     </select>
                   </label>
-                  <label>
+                  <label class="task-label">
                     Template
-                    <select name="template">
+                    <select name="template" class="task-input">
                       <option value="">Select template</option>
                       <option>Standard Template</option>
                       <option>Agile Template</option>
@@ -291,17 +293,17 @@
                       <option>Custom Template</option>
                     </select>
                   </label>
-                  <label>
+                  <label class="task-label">
                     Start Date
-                    <input type="date" name="startDate" required />
+                    <input type="date" name="startDate" class="task-input" required />
                   </label>
-                  <label>
+                  <label class="task-label">
                     End Date
-                    <input type="date" name="endDate" required />
+                    <input type="date" name="endDate" class="task-input" required />
                   </label>
-                  <label>
+                  <label class="task-label">
                     Department *
-                    <select name="department" required>
+                    <select name="department" class="task-input" required>
                       <option value="">Select department</option>
                       <option>Marketing</option>
                       <option>Sales</option>
@@ -311,43 +313,44 @@
                       <option>Client Service</option>
                     </select>
                   </label>
-                  <label>
+                  <label class="task-label">
                     Project Type
                     <input
                       type="text"
                       name="type"
+                      class="task-input"
                       placeholder="Internal, Client, Campaign..."
                     />
                   </label>
-                  <label>
+                  <label class="task-label">
                     Priority
-                    <select name="priority">
+                    <select name="priority" class="task-input">
                       <option value="none">None</option>
                       <option value="low">Low</option>
                       <option value="medium">Medium</option>
                       <option value="high">High</option>
                     </select>
                   </label>
-                  <label>
+                  <label class="task-label">
                     Business Hours
-                    <select name="businessHours">
+                    <select name="businessHours" class="task-input">
                       <option value="standard">Standard Business Hours</option>
                       <option value="24/7">24/7</option>
                       <option value="custom">Custom</option>
                     </select>
                   </label>
-                  <label>
+                  <label class="task-label">
                     Task Layout
-                    <select name="taskLayout">
+                    <select name="taskLayout" class="task-input">
                       <option value="standard">Standard Layout</option>
                       <option value="kanban">Kanban Board</option>
                       <option value="list">List View</option>
                       <option value="timeline">Timeline View</option>
                     </select>
                   </label>
-                  <label>
+                  <label class="task-label">
                     Project Group
-                    <select name="projectGroup">
+                    <select name="projectGroup" class="task-input">
                       <option value="">Select group</option>
                       <option>Q1 Projects</option>
                       <option>Q2 Projects</option>
@@ -356,46 +359,53 @@
                       <option>Ongoing</option>
                     </select>
                   </label>
-                  <label>
+                  <label class="task-label">
                     Tags
                     <input
                       type="text"
                       name="tags"
+                      class="task-input"
                       placeholder="Enter tags (comma separated)"
                     />
                   </label>
-                  <label style="grid-column: 1 / -1;">
+                  <label class="task-label task-label-full">
                     Description
                     <textarea
                       name="description"
+                      class="task-input task-textarea"
                       placeholder="Type @ to mention users. Type # to mention a Task or an Issue."
                       rows="4"
                     ></textarea>
                   </label>
-                  <div style="grid-column: 1 / -1; margin-top: 0.5rem;">
-                    <label style="display: flex; align-items: center; gap: 0.5rem; flex-direction: row;">
-                      <input type="checkbox" name="strictProject" />
+                  <div class="task-label task-label-full" style="margin-top: 0.5rem;">
+                    <label class="task-checkbox-label">
+                      <input type="checkbox" name="strictProject" class="task-checkbox" />
                       <span>Make this a strict project</span>
                     </label>
                   </div>
-                  <div style="grid-column: 1 / -1; margin-top: 0.5rem;">
+                  <div class="task-label task-label-full" style="margin-top: 0.5rem;">
                     <details style="margin-top: 0.5rem;">
-                      <summary style="cursor: pointer; font-weight: 500; margin-bottom: 0.5rem;">Roll-up</summary>
-                      <label style="display: flex; align-items: center; gap: 0.5rem; flex-direction: row; margin-top: 0.5rem;">
-                        <input type="checkbox" name="rollup" />
+                      <summary style="cursor: pointer; font-weight: 500; margin-bottom: 0.5rem; color: #374151;">Roll-up</summary>
+                      <label class="task-checkbox-label" style="margin-top: 0.5rem;">
+                        <input type="checkbox" name="rollup" class="task-checkbox" />
                         <span>Enable this option to roll-up dates from Tasks/subtasks to projects and Phases. Work hours, time logs, and % completion will roll-up from subtasks to Tasks.</span>
                       </label>
                     </details>
                   </div>
-                  <div style="grid-column: 1 / -1; display: flex; gap: 0.75rem; margin-top: 1rem;">
-                    <button type="submit" class="btn-primary">
+                  <div class="task-form-actions">
+                    <button type="submit" class="btn-task-primary">
                       Add Project
                     </button>
-                    <button type="button" class="btn-secondary" onclick="document.getElementById('form-project').reset();">
+                    <button type="button" class="btn-task-cancel" onclick="document.getElementById('form-project').reset();">
                       Cancel
                     </button>
                   </div>
                 </form>
+                <button class="scroll-down-btn" id="scroll-down-project" title="Scroll down">
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M5 7.5L10 12.5L15 7.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                </button>
               </div>
               <div class="card">
                 <h3>Projects</h3>
@@ -416,92 +426,101 @@
 
             <!-- Operations - Add Tasks -->
             <div id="ops-tasks" class="subview">
-              <div class="card" style="max-width: 900px; margin: 0 auto;">
-                <h2>New Task</h2>
-                <form id="form-task" class="form-grid">
-                  <label>
-                    Project *
-                    <select name="projectId" id="select-task-project" required>
-                      <option value="">Select project</option>
-                    </select>
-                  </label>
-                  <label>
-                    Task Owner
-                    <select name="taskOwnerId" id="select-task-owner">
-                      <option value="">Select owner</option>
-                    </select>
-                  </label>
-                  <label style="grid-column: 1 / -1;">
-                    Task Title *
-                    <input
-                      type="text"
-                      name="title"
-                      placeholder="Enter task title"
-                      required
-                    />
-                  </label>
-                  <label>
-                    Priority
-                    <select name="priority">
-                      <option value="none">! None</option>
-                      <option value="low">! Low</option>
-                      <option value="medium">! Medium</option>
-                      <option value="high">! High</option>
-                    </select>
-                  </label>
-                  <label>
-                    Start Date
-                    <input type="date" name="startDate" />
-                  </label>
-                  <label>
-                    Due Date
-                    <input type="date" name="dueDate" />
-                  </label>
-                  <label>
-                    Estimated Hours
-                    <input
-                      type="number"
-                      name="estimate"
-                      min="0"
-                      step="0.5"
-                      placeholder="e.g. 8"
-                    />
-                  </label>
-                  <label>
-                    Time
-                    <input
-                      type="time"
-                      name="time"
-                      value="09:00"
-                    />
-                  </label>
-                  <label style="grid-column: 1 / -1;">
-                    Description
-                    <textarea
-                      name="description"
-                      placeholder="Type @ to mention users. Type # to mention a Task or an Issue."
-                      rows="4"
-                    ></textarea>
-                  </label>
-                  <label style="grid-column: 1 / -1;">
-                    Notify users associated with the Task
-                    <select name="notifyUsers" id="select-task-notify" multiple style="min-height: 100px;">
-                      <option value="po">PO - Project Owner</option>
-                      <option value="to">TO - Task Owner</option>
-                      <option value="tc">TC - Task Created By</option>
-                      <option value="tf">TF - Task Followers</option>
-                    </select>
-                    <small style="color: var(--text-soft); font-size: 0.75rem;">Hold Ctrl/Cmd to select multiple</small>
-                  </label>
-                  <div style="grid-column: 1 / -1; display: flex; gap: 0.75rem; margin-top: 1rem;">
-                    <button type="submit" class="btn-primary">
-                      Add Task
-                    </button>
-                    <button type="button" class="btn-secondary" onclick="document.getElementById('form-task').reset();">
-                      Cancel
-                    </button>
-                  </div>
-                </form>
+              <div class="task-form-container">
+                <div class="task-form-card">
+                  <h2 class="task-form-title">New Task</h2>
+                  <form id="form-task" class="task-form-grid">
+                    <label class="task-label">
+                      Project *
+                      <select name="projectId" id="select-task-project" class="task-input" required>
+                        <option value="">Select project</option>
+                      </select>
+                    </label>
+                    <label class="task-label">
+                      Task Owner
+                      <select name="taskOwnerId" id="select-task-owner" class="task-input">
+                        <option value="">Select owner</option>
+                      </select>
+                    </label>
+                    <label class="task-label task-label-full">
+                      Task Title *
+                      <input
+                        type="text"
+                        name="title"
+                        class="task-input"
+                        placeholder="Enter task title"
+                        required
+                      />
+                    </label>
+                    <label class="task-label">
+                      Priority
+                      <select name="priority" class="task-input">
+                        <option value="none">! None</option>
+                        <option value="low">! Low</option>
+                        <option value="medium">! Medium</option>
+                        <option value="high">! High</option>
+                      </select>
+                    </label>
+                    <label class="task-label">
+                      Start Date
+                      <input type="date" name="startDate" class="task-input" />
+                    </label>
+                    <label class="task-label">
+                      Estimated Hours
+                      <input
+                        type="number"
+                        name="estimate"
+                        class="task-input"
+                        min="0"
+                        step="0.5"
+                        placeholder="e.g. 8"
+                      />
+                    </label>
+                    <label class="task-label task-label-full">
+                      Description
+                      <textarea
+                        name="description"
+                        class="task-input task-textarea"
+                        placeholder="Type @ to mention users. Type # to mention a Task or an Issue."
+                        rows="4"
+                      ></textarea>
+                    </label>
+                    <label class="task-label task-label-full task-notify-section">
+                      Notify users associated with the Task *
+                      <div class="task-notify-options">
+                        <label class="task-checkbox-label">
+                          <input type="checkbox" name="notifyUsers" value="po" class="task-checkbox" />
+                          <span>PO - Project Owner</span>
+                        </label>
+                        <label class="task-checkbox-label">
+                          <input type="checkbox" name="notifyUsers" value="to" class="task-checkbox" />
+                          <span>TO - Task Owner</span>
+                        </label>
+                        <label class="task-checkbox-label">
+                          <input type="checkbox" name="notifyUsers" value="tc" class="task-checkbox" />
+                          <span>TC - Task Created By</span>
+                        </label>
+                        <label class="task-checkbox-label">
+                          <input type="checkbox" name="notifyUsers" value="tf" class="task-checkbox" />
+                          <span>TF - Task Followers</span>
+                        </label>
+                      </div>
+                    </label>
+                    <div class="task-form-actions">
+                      <button type="submit" class="btn-task-primary">
+                        Add Task
+                      </button>
+                      <button type="button" class="btn-task-cancel" onclick="document.getElementById('form-task').reset();">
+                        Cancel
+                      </button>
+                    </div>
+                  </form>
+                  <button class="scroll-down-btn" id="scroll-down-task" title="Scroll down">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                      <path d="M5 7.5L10 12.5L15 7.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </button>
+                </div>
               </div>
               <div class="card" style="margin-top: 1.5rem;">
                 <h3>All Tasks</h3>
